--- a/music-for-all.css
+++ b/music-for-all.css
@@ -1,8 +1,4 @@
-h1{
-    background-color  : #FFC300;
-    margin: 0;
-  }
-  .recent-songs{
+.recent-songs{
       font-weight: bold;
   }
   
@@ -12,7 +8,7 @@ h1{
   .navbar-brand{
       font-size: 50px;
       font-family: Arial, Helvetica, sans-serif;
-      font-style:italic;
+      font-style: italic
   }
   body{
   background-color: #F7E65E;
@@ -21,4 +17,7 @@ h1{
     text-decoration: underline;
     font-weight: bold;
     color: black;
+}
+.top-5{
+    font-weight:bold;
 }
