--- a/music-for-all.css
+++ b/music-for-all.css
@@ -7,8 +7,8 @@
   }
   .navbar-brand{
       font-size: 50px;
-      font-family: Arial, Helvetica, sans-serif;
-      font-style: italic
+      font-style: italic;
+      font-family: 'Allura', cursive;
   }
   body{
   background-color: #F7E65E;
@@ -21,3 +21,13 @@
 .top-5{
     font-weight:bold;
 }
+#content{
+    padding-left: 20px
+}
+#title{
+    font-family: 'Dancing Script', cursive;
+    size: 80px;
+    font weight: bold
+}
+font-family: Arial, Helvetica, sans-serif;
+font-family: Allura; cursive;
