--- a/music-for-all.css
+++ b/music-for-all.css
@@ -8,7 +8,7 @@
   .navbar-brand{
       font-size: 50px;
       font-style: italic;
-      font-family: 'Allura', cursive;
+      font-family: Arial, Helvetica, sans-serif;
   }
   body{
   background-color: #F7E65E;
@@ -24,10 +24,7 @@
 #content{
     padding-left: 20px
 }
-#title{
-    font-family: 'Dancing Script', cursive;
-    size: 80px;
-    font weight: bold
+.utube{
+    color: black;
+    text-decoration: underline;
 }
-font-family: Arial, Helvetica, sans-serif;
-font-family: Allura; cursive;
